added video changes

--- a/assets/css/layout/_black-section.scss
+++ b/assets/css/layout/_black-section.scss
@@ -52,5 +52,16 @@
   img{
     display: block;
     margin: 0 auto;
+    min-height: 100px;
+    @include md{
+      min-height: auto;
+      max-width: 400px;
+      margin-bottom: 5px;
+    }
+    @include sm{
+      min-height: auto;
+      max-width: 200px;
+      margin-bottom: 5px;
+    }
   }
 }
