--- a/assets/css/layout/_btc-section.scss
+++ b/assets/css/layout/_btc-section.scss
@@ -13,6 +13,12 @@
       color: $yellowColor;
       font-weight: 900;
       font-style: italic;
+      @include md{
+        color: $primaryColor;
+      }
+      @include sm{
+        color: $primaryColor;
+      }
     }
     @include md{
       font-size: 30px;
