--- a/assets/css/layout/_preview-section.scss
+++ b/assets/css/layout/_preview-section.scss
@@ -113,6 +113,16 @@
       font-size: 24px;
     }
   }
+  .real-blue {
+    font-size: 40px;
+    color: $blueColor;
+    @include md {
+      font-size: 30px;
+    }
+    @include sm {
+      font-size: 24px;
+    }
+  }
   &.smaller{
     font-size: 30px;
     @include md{
@@ -138,6 +148,11 @@
       @include sm{
         font-size: 22px;
       }
+    }
+  }
+  &.mt-5{
+    @include sm{
+      margin-top: 0px !important;
     }
   }
 }
