--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -4,8 +4,11 @@
 html,
 body {
   height: 100%;
+  position: relative;
 }
-
+// html {
+//   scroll-behavior: smooth;
+// }
 body {
   font-family: $secondaryFont;
   color: $black;
@@ -146,13 +149,45 @@ button:focus {
 
 .red {
   color: $primaryColor;
-  @include sm {
-    font-size: 16px;
-  }
 }
 .blue {
   color: $blueColor;
-  @include sm {
-    font-size: 16px;
+}
+
+.scroll-to-top {
+  opacity: 0;
+  position: fixed;
+  right: 20px;
+  bottom: 10px;
+  z-index: 9;
+  transition: all 0.3s ease;
+  img {
+    max-width: 50px;
+    @include sm {
+      max-width: 40px;
+    }
   }
+  &.active {
+    opacity: 1;
+  }
+}
+
+.video-modal .modal-content {
+  border: 0px;
+  border-radius: 0px;
+  padding: 0px;
+}
+
+.video-modal .modal-content .modal-body {
+  padding: 0px;
+}
+
+.video-modal .modal-content .close {
+  position: absolute;
+  right: 5px;
+  top: -45px;
+  z-index: 9;
+  color: #fff;
+  opacity: 1;
+  font-size: 45px;
 }
