--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -4,9 +4,15 @@
 
   .footer-top {
     padding-bottom: 30px;
+    @include sm{
+      padding-bottom: 15px;
+    }
     .container {
       border-bottom: 2px solid #191919;
       padding-bottom: 30px;
+      @include sm{
+        padding-bottom: 15px;
+      }
     }
   }
   .copy-text {
@@ -56,6 +62,9 @@
       overflow: hidden;
       clear: both;
       padding-bottom: 30px;
+      @include sm{
+        padding-bottom: 0px;
+      }
       .single-brand {
         width: 14.285%;
         float: left;
@@ -66,12 +75,16 @@
         justify-content: center;
         img {
           padding: 10px;
+          @include sm{
+            max-width: 135px;
+          }
         }
         @include md {
           width: 33.33%;
         }
         @include sm {
           width: 50%;
+          min-height: 60px;
         }
       }
       &.wallets {
@@ -87,6 +100,13 @@
           img {
             width: 100%;
             max-width: 220px;
+          }
+          &:last-child{
+            width: 100%;
+            text-align: center;
+            img{
+              max-width: 145px;
+            }
           }
         }
       }
