--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -3,7 +3,7 @@
   width: 100%;
   top: 0;
   left: 0;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.9);
   z-index: 9;
   .top-header {
     background: rgb(255, 76, 143);
@@ -47,7 +47,6 @@
     }
   }
   .header {
-    background-color: $white;
     padding: 10px 0px;
     .navbar-brand {
       img {
