--- a/assets/css/layout/_intro-section.scss
+++ b/assets/css/layout/_intro-section.scss
@@ -56,5 +56,12 @@
         max-width: 50px;
       }
     }
+    .text{
+      font-family: $primaryFont;
+      display: block;
+      color: $white;
+      font-weight: 800;
+      margin-top: 10px;
+    }
   }
 }
