--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -4,13 +4,13 @@
 
   .footer-top {
     padding-bottom: 30px;
-    @include sm{
+    @include sm {
       padding-bottom: 15px;
     }
     .container {
       border-bottom: 2px solid #191919;
       padding-bottom: 30px;
-      @include sm{
+      @include sm {
         padding-bottom: 15px;
       }
     }
@@ -30,7 +30,7 @@
       color: $white;
       font-size: 14px;
       font-weight: 900;
-      @include sm{
+      @include sm {
         margin-top: 25px;
         margin-bottom: 10px;
       }
@@ -45,7 +45,7 @@
           font-size: 14px;
           display: block;
           transition: all 0.3s ease;
-          &:hover{
+          &:hover {
             color: $secondaryColor;
           }
         }
@@ -62,7 +62,7 @@
       overflow: hidden;
       clear: both;
       padding-bottom: 30px;
-      @include sm{
+      @include sm {
         padding-bottom: 0px;
       }
       .single-brand {
@@ -75,12 +75,13 @@
         justify-content: center;
         img {
           padding: 10px;
-          @include sm{
+          @include sm {
             max-width: 135px;
           }
         }
         @include md {
           width: 33.33%;
+          min-height: 80px;
         }
         @include sm {
           width: 50%;
@@ -101,11 +102,20 @@
             width: 100%;
             max-width: 220px;
           }
-          &:last-child{
-            width: 100%;
-            text-align: center;
-            img{
-              max-width: 145px;
+          &:last-child {
+            @include md {
+              width: 100%;
+              text-align: center;
+              img {
+                max-width: 220px;
+              }
+            }
+            @include sm {
+              width: 100%;
+              text-align: center;
+              img {
+                max-width: 145px;
+              }
             }
           }
         }
@@ -115,8 +125,8 @@
   .footer-bottom {
     border-top: 2px solid $grayColor;
   }
-  .gradient-btn{
-    @include sm{
+  .gradient-btn {
+    @include sm {
       margin-top: 20px;
     }
   }
